--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.5",
-    "@types/react-router-dom": "^5.3.0",
-    "@types/styled-components": "^5.1.26"
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.26",
+    "styled-components": "^5.3.6"
   }
 }
